# self-play

./: .gitignore  README.md  pyproject.toml  report.md  report2.md
grpo_math/configs/: deepspeed_zero2.json  deepspeed_zero3.json  deepspeed_zero3_offload.json  pairwise_rollouts_06b_large.yaml  pairwise_rollouts_debug.yaml  pairwise_rollouts_debug_clean_restart.yaml  pairwise_rollouts_gemini25flash_single_verify_fast.yaml  pairwise_rollouts_gemini25flash_trace.yaml  pairwise_rollouts_gpt41_large.yaml  pairwise_rollouts_gpt41_single_verify_small.yaml  pairwise_rollouts_gpt41_verifiable_small.yaml  pairwise_rollouts_local4b_single_verify_fast.yaml  pairwise_rollouts_smoke.yaml  train_gsm8kv2_trl.yaml  train_smoke_trl.yaml
grpo_math/data/: gsm8k.py  reward.py
grpo_math/eval/: eval_gsm8k.py
grpo_math/models/: policy.py
grpo_math/prompts/: pairwise_judge_prompt.txt  question_generator_prompt.txt  question_generator_prompt_gemini_strict.txt  single_solution_verify_prompt.txt
grpo_math/self_play/: generate_pairwise_data.py
grpo_math/trl/: __init__.py  train_grpo_trl.py
grpo_math/utils/: metrics.py
outputs/pairwise_rollouts_debug/: samples.jsonl  samples_06b_large.jsonl  samples_clean_restart.jsonl  samples_gemini25flash_single_verify_fast.jsonl  samples_gemini25flash_trace.jsonl  samples_gpt41_large.jsonl  samples_gpt41_verifiable_small.jsonl
tests/: debug_single_pairwise_rollout.py  test_left_padding_masking.py  test_logprobs.py  test_reward.py
